spacing issue

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -44,7 +44,12 @@
   font-weight: normal;
 }
 
+html{
+
+  overflow: hidden;
+}
 body {
+  width: 100%;
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
@@ -69,4 +74,6 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ padding: 0;
+  margin: 0;
 }
