--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,12 @@
 @import './base.css';
+#app{
+    margin: 0;
+  }
+  html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
